alignment fixed

--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ a {
   align-items: center;
   justify-content: end;
   padding: 0 5%;
+
 }
 
 #side-drawer ul
@@ -100,7 +101,8 @@ a {
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding-top:2rem;
+  padding-top: 2rem;
+  padding-left: 0;
 }
 
 #side-drawer li
@@ -115,6 +117,11 @@ a {
   font-size: 2rem;
 
 } 
+
+#side-drawer nav
+{
+  padding: 0 5%;
+}
 
 main h1 {
   text-align: center;
